# preference-layer

./: .gitignore  CLAUDE.md  CONTRIBUTING.MD  DESCRIPTION.md  LICENCE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: check-declared-direction.sh
.github/workflows/: ci.yml  qil-ingest.yml
contexts/: README.md  ptp-credential-v0.1.schema.json  ptp-v1.jsonld
docs/: architecture.md  contributing.md  data-source-strategy.md  design-partner-onboarding.md  implementation-plan.md  investor.md  phase0-qil-results.md  phase0-results.md  phase1-amazon-realdata.md  phase1-attribute-extraction-design.md  phase1-cold-start-results.md  phase1-integration-results.md  phase1-kickoff.md  phase1-protocol-integration.md  phase1-quality-robustness-results.md  protocol-spec.md  retailer-data-sharing-agreement.md  retailer-return-signal-schema.md  whats-missing.md
docs/paper-notes/: 2026-06-20-paper-worthiness-assessment.md  2026-06-20-publication-roadmap.md  2026-06-20-results-ledger.md  README.md
experiments/: amazon_realdata_cell_phones_results.json  amazon_realdata_results.json  phase0_qil_results.json  phase0_results.json  phase1_cold_start_results.json  phase1_integration_results.json  phase1_quality_robustness_results.json  run_amazon_realdata.py  run_phase0.py  run_phase0_qil.py  run_phase1_cold_start.py  run_phase1_integration.py  run_phase1_quality_robustness.py  run_ptp_api.py  run_qil_api.py  run_qil_ingest.py  run_qil_realtext_harness.py
proposals/: technical.md
scripts/: setup-amazon.sh  setup.sh
src/preferencelayer/: __init__.py  attributes.py  cli.py
src/preferencelayer/agent/: __init__.py  _harness.py  ablation.py  combine.py  evaluate.py  protocol.py  recommender.py
src/preferencelayer/data/: amazon.py  integrated.py  synthetic.py
src/preferencelayer/eval/: __init__.py  harness.py  metrics.py  partner.py
src/preferencelayer/http/: __init__.py  app.py
src/preferencelayer/mcp/: __init__.py  anthropic_tools.py  langchain_tools.py  server.py
src/preferencelayer/models/: __init__.py  base.py  flat.py  graph.py  popularity.py
src/preferencelayer/ptp/: __init__.py  cloud_sync.py  credential.py  device_flow.py  persistence.py  ptp-credential-v0.1.schema.json  schema_validate.py  store.py  update.py
src/preferencelayer/qil/: __init__.py  aggregate.py  annotate.py  cli.py  corpus.py  eval.py  extract.py  gp.py  harness.py  http_api.py  mcp_server.py  quality_spans.py  query.py  refit.py  schema.py
src/preferencelayer/qil/ingest/: __init__.py  connectors.py  live_fetch.py  normalize.py  pipeline.py  politeness.py  schema.sql
tests/: test_agent_combine.py  test_agent_protocol.py  test_agent_recommender.py  test_amazon_loader.py  test_anthropic_mcp.py  test_cli_store.py  test_cloud_sync.py  test_cold_start_gate.py  test_credential.py  test_device_flow.py  test_http_device_flow.py  test_http_transport.py  test_integration_gate.py  test_langchain_mcp.py  test_metrics.py  test_models.py  test_partner_harness.py  test_persistence.py  test_qil_aggregate.py  test_qil_annotate.py  test_qil_b2_cli.py  test_qil_connectors.py  test_qil_corpus.py  test_qil_extract.py  test_qil_gp.py  test_qil_harness.py  test_qil_http_api.py  test_qil_ingest.py  test_qil_ingest_cli.py  test_qil_live_fetch.py  test_qil_postgres_sinks.py  test_qil_quality_spans.py  test_qil_query.py  test_qil_refit_cli.py  test_quality_robustness_gate.py  test_schema_validate.py  test_store.py  test_synthetic.py  test_update.py
tests/fixtures/: credential_invalid.json  credential_valid.json
tests/fixtures/ingest/: ifixit_guides.json  notebookcheck_reviews.json  reddit_keyboards.json  reddit_laptops.json  reddit_listing.json  robots_sample.txt
