[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "preferencelayer"
version = "0.1.0"
description = "Portable preference graph infrastructure for the open agent web (Phase 0 prototype)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENCE.md" }
authors = [{ name = "PreferenceLayer Contributors" }]
dependencies = [
    "numpy>=1.24",
    "pynacl>=1.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "jsonschema>=4.0", "fastapi>=0.110", "httpx>=0.27"]  # httpx powers fastapi.testclient
amazon = ["pandas>=1.5", "pyarrow>=12", "huggingface_hub>=0.20"]  # ingest the real Amazon Reviews 2023 corpus (Parquet + benchmark CSV)
mcp = ["mcp>=1.0"]           # only needed to run the live MCP server
api = ["fastapi>=0.110", "uvicorn>=0.27"]   # serve the QIL /quality + /compare HTTP API
schema = ["jsonschema>=4.0"] # full Draft 2020-12 validation of PTP credentials (validator has a built-in fallback otherwise)
http = ["fastapi>=0.110", "uvicorn>=0.27", "httpx>=0.27"]  # serve the three PTP endpoints over HTTP

[project.scripts]
preflayer = "preferencelayer.cli:main"
preflayer-validate = "preferencelayer.ptp.schema_validate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"preferencelayer.qil.ingest" = ["*.sql"]
preferencelayer = ["ptp/ptp-credential-v0.1.schema.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
