[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "preferencelayer"
version = "0.1.0"
description = "Portable preference graph infrastructure for the open agent web (Phase 0 prototype)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENCE.md" }
authors = [{ name = "PreferenceLayer Contributors" }]
dependencies = [
    "numpy>=1.24",
    "pynacl>=1.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "jsonschema>=4.0", "fastapi>=0.110", "httpx>=0.27", "langchain-core>=0.3"]  # httpx powers fastapi.testclient; langchain-core exercises the LangChain tool self-selection test
amazon = ["pandas>=1.5", "pyarrow>=12", "huggingface_hub>=0.20"]  # ingest the real Amazon Reviews 2023 corpus (Parquet + benchmark CSV)
mcp = ["mcp>=1.0"]           # only needed to run the live MCP server
api = ["fastapi>=0.110", "uvicorn>=0.27"]   # serve the QIL /quality + /compare HTTP API
schema = ["jsonschema>=4.0"] # full Draft 2020-12 validation of PTP credentials (validator has a built-in fallback otherwise)
http = ["fastapi>=0.110", "uvicorn>=0.27", "httpx>=0.27"]  # serve the three PTP endpoints over HTTP
langchain = ["langchain-core>=0.3"]  # expose the PTP tools as LangChain StructuredTools
anthropic = ["anthropic>=0.40"]  # only for the optional live Claude tool-selection test; the adapter itself needs no SDK
b2 = ["transformers>=4.30", "torch>=2.0"]  # fine-tune the use-profile head on real text (Work Stream B2); CPU/GPU
ingest = ["requests>=2.28"]  # HTTP transport for live_fetch's Reddit/Arctic Shift/iFixit fetch adapters

[project.scripts]
preflayer = "preferencelayer.cli:main"
preflayer-validate = "preferencelayer.ptp.schema_validate:main"
qil-refit = "preferencelayer.qil.cli:refit_main"
qil-ingest = "preferencelayer.qil.cli:ingest_main"
qil-b2 = "preferencelayer.qil.cli:b2_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"preferencelayer.qil.ingest" = ["*.sql"]
preferencelayer = ["ptp/ptp-credential-v0.1.schema.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
